--- a/ex01/index.html
+++ b/ex01/index.html
@@ -8,12 +8,15 @@
   <title>Estudo sobre flex-box</title>
 </head>
 <body>
-  <h1>Estudo Flex-Box</h1>
-  <div class="flex-container">
-    <div class="flex-item">1</div>
-    <div class="flex-item">2</div>
-    <div class="flex-item">3</div>
-  </div>
+  <header>
+    <img src="http://lorempixel.com/120/120" class="logo" alt="">
+    <ul>
+      <li>1</li>
+      <li>2</li>
+      <li>3</li>
+      <li>4</li>
+    </ul>
+  </header>
   <footer>
     Footer
   </footer>
